final touches for the day added photos on bottom and fixed alignment issues, minor spacing updates to content middle and content bottom divs

--- a/assets/CSS/main.css
+++ b/assets/CSS/main.css
@@ -1,7 +1,7 @@
 body {
     background: black url(../images/20x31_background.jpg);
     background-attachment: fixed;
-    background-position: center top;
+    background-position: center bottom;
     background-repeat: no-repeat;
     background-size: 100%;
     color: #ffffff;
@@ -107,7 +107,7 @@ video {
 #middleLeft {
     float: left;
     width: 560px;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 #middleRight {
     float: left;
@@ -126,7 +126,7 @@ video {
     color: #ffffff;
     font-weight: bold;
     font-family: "Arial", "Helvetica Neue", helvetica, sans-serif;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
 }
 .blueButton {
     width: 200px;
@@ -142,6 +142,14 @@ video {
 }
 .contentBottom {
     clear: both;
-    text-align: center;
-    margin-bottom: 50px;    
+    text-align: left;
+    margin-bottom: 20px;    
+}
+.imgPortrait{
+    height: 200px;
+    margin: 0px 10px 0px 0px;
+}
+
+#imgTwo{
+    margin-bottom: 100px;
 }
